WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126225
[GTK] Fix warnings when generating WebExtensions gobject-instrospection files
https://bugs.webkit.org/show_bug.cgi?id=126225
Summary
[GTK] Fix warnings when generating WebExtensions gobject-instrospection files
Carlos Garcia Campos
Reported
2013-12-25 01:41:45 PST
Source/WebKit2/WebProcess/InjectedBundle/API/gtk/WebKitWebPage.cpp:414: Warning: WebKit2WebExtension: webkit_web_page_get_dom_document: return value: Missing (transfer) annotation Source/WebKit2/WebProcess/InjectedBundle/API/gtk/WebKitWebPage.h:68: Warning: WebKit2WebExtension: webkit_web_page_get_main_frame: return value: Missing (transfer) annotation webkit_web_page_get_main_frame is not even documented :-P
Attachments
Patch
(2.00 KB, patch)
2013-12-25 01:44 PST
,
Carlos Garcia Campos
pnormand
: review+
pnormand
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-12-25 01:44:07 PST
Created
attachment 219988
[details]
Patch
Philippe Normand
Comment 2
2013-12-25 01:47:54 PST
Comment on
attachment 219988
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=219988&action=review
> Source/WebKit2/WebProcess/InjectedBundle/API/gtk/WebKitWebPage.cpp:466 > + * Retruns the main frame of a #WebKitWebPage.
Returns
Carlos Garcia Campos
Comment 3
2013-12-25 01:53:02 PST
Committed
r161064
: <
http://trac.webkit.org/changeset/161064
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug