[GTK] Fix warnings when generating WebExtensions gobject-instrospection files https://bugs.webkit.org/show_bug.cgi?id=126225

Reviewed by Philippe Normand.

Add transfer annotation to webkit_web_page_get_dom_document() and
document webkit_web_page_get_main_frame().

* WebProcess/InjectedBundle/API/gtk/WebKitWebPage.cpp:

Canonical link: https://commits.webkit.org/144156@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161064 268f45cc-cd09-0410-ab3c-d52691b4dbfc